--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-id3": "^0.2.1",
+    "youtube-dl": "^3.5.0",
     "youtube-mp3-downloader": "^0.7.6",
     "ytdl-core": "^4.1.7"
   }
